<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.example.books.feature.login.LoginScreenEventListener" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sample_book_cover"
        android:paddingHorizontal="24dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkable="false"
            android:clickable="false"
            app:contentPadding="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/login_txt_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="?colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_txt_input_layout"
                    style="?textInputOutlinedExposedDropdownMenuStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/login_email_hint"
                    app:startIconDrawable="@drawable/ic_mail">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/email_auto_complete_txt_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{listener::afterEmailTxtChanged}"
                        android:inputType="textEmailAddress"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwd_txt_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/login_pwd_hint"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_pwd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd_input_edit_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{listener::afterPwdTxtChanged}"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{listener::signIn}"
                    android:text="@string/sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pwd_txt_input_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_btn"
                    style="?materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:onClick="@{listener::signUp}"
                    android:text="@string/sign_up" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>