<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.example.books.feature.bookmarks.BookmarksScreenActionListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurface">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/refresh_circular_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:clipToPadding="false"
            android:visibility="invisible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/item_list_book" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/empty_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="36dp"
            android:text="@string/bookmarks_empty_msg"
            android:textAlignment="center"
            android:textSize="21sp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_store_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:onClick="@{listener::goToStore}"
            android:text="@string/go_to_store"
            android:translationY="15dp"
            android:visibility="gone"
            app:layout_anchor="@id/empty_msg"
            app:layout_anchorGravity="center_horizontal|bottom" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_more_circular_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:indeterminate="true"
            android:visibility="invisible" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/bookmarks"
                app:titleCentered="true" />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
