<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="book"
            type="com.example.books.core.model.DetailedBook" />

        <import
            alias="Action"
            type="com.example.books.feature.book.BookScreenState.Action" />

        <variable
            name="actionListener"
            type="com.example.books.feature.book.BookScreenState.Action.Listener" />

        <import type="com.example.books.base.binding.adapter.ViewInset" />

    </data>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurface"
        android:transitionName="@string/book_screen_transition_name">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cover_img_filter_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent=".45">

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/sample_book_cover"
                        bind:coilLoad="@{book.coverUrl}" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_txt_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{book.name}"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@id/author_txt_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cover_img_filter_view"
                    app:layout_constraintTop_toTopOf="@id/cover_img_filter_view" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/author_txt_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{book.author}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/publisher_txt_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cover_img_filter_view" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/publisher_txt_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="15dp"
                    android:text="@{book.publisher}"
                    app:layout_constraintBottom_toTopOf="@id/header_barrier"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cover_img_filter_view" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/header_barrier"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierDirection="bottom"
                    app:barrierMargin="15dp"
                    app:constraint_referenced_ids="cover_img_filter_view,name_txt_view,author_txt_view,publisher_txt_view" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bookmark_btn"
                    style="?materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:onClick="@{(v) -> actionListener.onAction.invoke(Action.ToggleBookmark.INSTANCE)}"
                    android:text="@string/bookmark"
                    app:layout_constraintBottom_toTopOf="@id/actions_barrier"
                    app:layout_constraintEnd_toStartOf="@id/collect_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header_barrier" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/collect_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:onClick="@{(v) -> actionListener.onAction.invoke(Action.ToggleCollect.INSTANCE)}"
                    android:text="@string/add_to_collection"
                    app:layout_constraintBottom_toTopOf="@id/actions_barrier"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/bookmark_btn"
                    app:layout_constraintTop_toBottomOf="@id/header_barrier" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/positive_actions_group"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:constraint_referenced_ids="bookmark_btn,collect_btn" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/actions_barrier"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="bookmark_btn,collect_btn" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/published_date_and_pages_divider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/published_date_pages_barrier"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/actions_barrier" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/published_date_txt_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{book.publishedDate}"
                    android:textSize="17sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/published_date_title_txt_view"
                    app:layout_constraintEnd_toStartOf="@id/published_date_and_pages_divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/published_date_and_pages_divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/published_date_title_txt_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/published_date"
                    android:textSize="12sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@id/published_date_and_pages_divider"
                    app:layout_constraintEnd_toStartOf="@id/published_date_and_pages_divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/published_date_txt_view" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pages_count_txt_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{@string/integer_value(book.pagesCount)}"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@id/pages_title_txt_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/published_date_and_pages_divider"
                    app:layout_constraintTop_toTopOf="@id/published_date_and_pages_divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pages_title_txt_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/pages"
                    android:textSize="12sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@id/published_date_and_pages_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/published_date_and_pages_divider"
                    app:layout_constraintTop_toBottomOf="@id/pages_count_txt_view" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/published_date_pages_barrier"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="pages_title_txt_view,published_date_title_txt_view,published_date_and_pages_divider" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/descr_txt_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:justificationMode="inter_word"
                    android:text="@{book.description}"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/published_date_pages_barrier"
                    bind:ignore="UnusedAttribute" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            style="?materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/navigate_up_btn_descr"
            android:nestedScrollingEnabled="false"
            app:icon="@drawable/ic_navigate_up" />
    </FrameLayout>
</layout>
